| Summary: | ASTERISK-21970: Reconnects to an ARI websocket do not convey events for channels already in the application | ||
| Reporter: | Matt Jordan (mjordan) | Labels: | Asterisk12 |
| Date Opened: | 2013-06-27 17:50:29 | Date Closed: | 2013-07-23 08:51:12 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Core/Stasis Resources/res_ari |
| Versions: | 12 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | # Connect a WS to stasis application 'foo'
# Dial into Asterisk and have a channel enter into a Stasis(foo) # Kill the WS # Re-connect # Hangup the channel The re-connected WS should get a 'stasis_end' message. It doesn't receive any events for channels already in the Stasis application after reconnecting. | ||
| Comments: | |||